# spectral-flow-probe

./: .gitignore  README.md  pyproject.toml  test_e2e.py
assets/v2/: generate_billboard.py
data/round1/: SUMMARY.md  phase1_deepseek-r1-14B.json  phase1_gemma4-4B.json  phase1_qwen25-7B.json  phase1_qwen3-14B.json  synthesis.json
data/round2/: IRONCLAD_SUMMARY.md  phase1_qwen25-7B-base.json  phase1_qwen3-0.6B.json  phase1_qwen3-1.7B.json  phase1_qwen3-14B_sde.json  phase1_qwen3-4B.json  phase1_qwen3-8B.json
data/round3/: phase1_qwen3-14B_sde03.json  phase1_qwen3-30B-A3B.json  phase1_qwen3-8B_gen_think_off.json  phase1_qwen3-8B_gen_think_on.json  phase1_qwen3-8B_think_on.json
experiments/: _common.py  _exp2_worker.py  _exp4_worker.py  dpo_abc.py  exp10_plots.py  exp10_principal_angles.py  exp11_angle_predicts_pr_shift.py  exp2_universality.py  exp3_causality.py  exp4_regularizer.py  exp5_fullft_causality.py  exp5b_fullft_1.7B.py  exp6_sensitivity_battery.py  exp7_ifeval.py  exp7_livecode.py  exp7c_pr_calibration.py  exp7d_pr_drift.py  exp8_weight_anatomy.py  exp9_radar_scan.py  exp9b_band0.py  exp9b_weight_svd.py  exp9b_weight_svd_fast.py  rerun_failed.sh  run_exp5_overnight.sh  run_exp5b_1.7B.sh  run_exp6.sh  run_exp7_ifeval.sh  run_exp7_livecode.sh  run_exp9_radar.sh  run_exp9_universality.sh  run_exp9_universality_v2.sh  run_overnight.sh
spectral_flow_probe/: __init__.py  _compat.py  bands.py  cli.py  core.py  diagnostic.py  fingerprint.py  moe.py  monitor.py  planner.py  plot.py  probe.py  prompts.py  regularizer.py  report.py  rotation.py
(+80 files in other folders)
