[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spectral-flow-probe"
version = "0.1.0"
description = "Spectral Flow Probe — 20-minute geometric diagnostic for any Transformer"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [{name = "Jing Zhang", email = "henryz838978@gmail.com"}]
keywords = ["transformers", "spectral-analysis", "representation-geometry", "rl-alignment", "pca"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "torch>=2.0",
    "transformers>=4.40",
    "scikit-learn>=1.0",
    "numpy>=1.24",
    "matplotlib>=3.5",
]

[project.optional-dependencies]
wandb = ["wandb"]
tensorboard = ["tensorboard"]

[project.urls]
Homepage = "https://github.com/HenryZ838978/spectral-flow-probe"
Paper = "https://arxiv.org/abs/2504.XXXXX"

[project.scripts]
sfp = "spectral_flow_probe.cli:main"

[tool.setuptools.packages.find]
include = ["spectral_flow_probe*"]
